# avatar

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  pyproject.toml  test.sh
.github/workflows/: cd.yml  ci.yml  publish-image.yml
config/: .env  .env.example  config.yaml
scripts/: start.sh
src/: app.py  logging_utils.py  server.py
src/config/: __init__.py  config.py  models.py
src/orchestration/: __init__.py  chat.py
src/resources/: __init__.py  fps_context.py
src/resources/templates/: system.prompt  user.prompt
src/services/: __init__.py  llm.py  speech_to_text.py  text.py  text_to_speech.py  tts.py
tests/: test_chat_controller.py  test_config.py  test_logging_utils.py  test_server.py  test_text.py  test_text_to_speech.py
